# crypto_jargon

./: README.md  gen_embedding.py  pyproject.toml
diagrams/: Training.drawio  gen_embedding.py
environ/: constants.py
environ/framework/: seed.py
environ/pretrain/: data.py  mlm_data_gen.py  mlm_pretrain.py
environ/utils/: longcov.py  phrase_extraction.py  t2s.py
scripts/: mlm_data_gen.py  mlm_pretrain.py  phrase_extraction.py
scripts/emb/: bert_emb_agg.py  bert_emb_gen.py  word2vec_gen.py
scripts/eval/: lda.py  sample_sentence.py  w2v.py  word_emb_eval.py
scripts/framework/: candidate.py  final_corpus.py  seed.py
scripts/process/: corpus_search.py  corpus_vocab.py  corpus_word_vocab.py  eval.py  gen_embedding.py  newWordsDiscorvery.py  preprocess.py  pretrain.py  weiboMongodb2csv.py  word2vec_tensorflow.py  wordSeg.py  word_vec.py
scripts/tabulate/: word_emb_eval.py
scripts/train/: data_gen.py  gen_embedding.py  lda.py  mlm_data_gen.py  mlm_embedding.py  mlm_pretrain.py  pretrain.py  tokenizer.py  word2vec_train.py
scripts/visualization/: word_emb_eval.py
tables/: word_emb_eval.tex
