[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "environ"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9.15"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "bert4keras==0.10.5",
  "jieba==0.42.1",
  "Keras==2.3.1",
  "numpy==1.19.5",
  "pandas==1.1.5",
  "PyPrind==2.11.3",
  "tensorflow==1.15.0",
  "torch==1.8.1",
  "smoothnlp==0.4.0",
]

[project.optional-dependencies]
dev = ["pylint", "black", "pytest"]

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py       
)
'''